crates/sdk/tests/macros/error_duplicate_init.stderr
error: (calimero)> duplicate `#[app::init]` — a type may declare at most one initializer
  --> tests/macros/error_duplicate_init.rs:23:12
   |
23 |     pub fn init(value: u64) -> S {
   |            ^^^^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `S`
  --> tests/macros/error_duplicate_init.rs:13:8
   |
13 | struct S;
   |        ^ add an `#[app::init]` method to this type
   |
   = help: the trait `AppStateInit` is not implemented for `S`
note: required by a bound in `AppState`
  --> src/state.rs
   |
   | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
   |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`

error[E0592]: duplicate definitions with name `init`
  --> tests/macros/error_duplicate_init.rs:23:5
   |
18 |     pub fn init() -> S {
   |     ------------------ other definition for `init`
...
23 |     pub fn init(value: u64) -> S {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `init`
